to make jacoco work
Some other things have to be also done on personal pc. The target file might not be created properly...