@@ -29,4 +29,22 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+     <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- add add-opens lines for **ALL** packages in your module that are tested.
+                        For testing it is fine to open your packages for the whole world, which includes
+                        e.g. junit, assertj, mockito, and jacoco, to name a few.
+                        Also leave ${argLine} because it is set/used by the coverage plugin.
+                    -->
+                    <argLine>
+                        ${argLine}
+                        --add-opens businessentities_api_module/fontys.businessentities=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
